fix license check